tests/bigint/invalid11.js
type InvalidOctalLegacy = 016432n; // error
